# fastapi_task

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  alembic.ini  db_models.py  exceptions.py  main.py  pyproject.toml  python_models.py  queries.py
docker/: docker-compose.yaml  dockerfile
src/: config.py  database.py  exceptions.py
src/alembic/: env.py
src/alembic/versions/: 4d45ecbcdab5_initial.py  522d79a96d22_initial.py  7bfc1a3b7538_fix.py
src/analytics/services/: analytics.py
src/transactions/: enums.py  exceptions.py  routers.py  schemas.py
src/transactions/models/: __init__.py  transaction.py
src/transactions/services/: transactions.py
src/users/: dependencies.py  enums.py  exceptions.py  routers.py  schemas.py
src/users/models/: __init__.py  user.py  user_balance.py  userbalance.py
src/users/routers/: users.py
src/users/services/: users.py
src/utils/: dependencies.py
tests/: conftest.py  test_transactions_integration.py  test_users_integration.py
