[project]
name = "task"
version = "0.1.0"
description = ""
authors = [{ name = "Author", email = "author@gmail.com" }]
requires-python = ">=3.11, <3.13"
readme = "README.md"
dependencies = [
    "uvicorn>=0.23.2,<0.24",
    "httpx>=0.25.0,<0.26",
    "fastapi>=0.115.6,<0.116",
    "sqlalchemy>=2.0.37,<3",
    "aiosqlite>=0.20.0,<0.21",
    "pydantic[email]>=2.12.5",
]

[dependency-groups]
dev = [
    "faker>=19.10.0,<20",
    "pylint>=3.0.1,<4",
    "pylint-pydantic>=0.3.0,<0.4",
    "pytest>=7.4.2,<8",
    "pytest-alembic>=0.10.7,<0.11",
    "pytest-asyncio>=0.21.1,<0.22",
    "pytest-cov>=4.1.0,<5",
    "pytest-env>=1.0.1,<2",
    "pytest-httpx>=0.26.0,<0.27",
    "pytest-mock>=3.11.1,<4",
    "pytest-mock-server>=0.3.0,<0.4",
    "pytest-xdist>=3.3.1,<4",
]

[tool.black]
line-length = "120"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
